tests/coverage/misc/fail/negative/truncation/005_class_body_eof.js
// Expected error: unterminated class body.
class Parser {
    method() {
        return 1;
    }
